[package]
name = "toto-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = [ "derive" ] }
chrono = { version = "0.4.31"}
uuid = { version = "1.6.1", features = ["v4"] }
rusqlite = { version = "0.30.0", features = ["bundled", "uuid", "chrono"] }